# Template-ZIG-Mod-Menu

./: .env.example  LICENSE  LUA_DOCS.md  README.md  gradle.properties  settings.gradle
app/: build.gradle  gradle.properties  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/core/: palladium.cpp
app/src/main/cpp/include/KittyMemory/: StealthPatch.cpp  StealthPatch.h
app/src/main/cpp/include/Tools/: Tools.cpp  Tools.h
app/src/main/cpp/include/openssl/include/openssl/: configuration.h
app/src/main/cpp/include/openssl/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
app/src/main/cpp/include/oxorany/: oxorany.h
app/src/main/cpp/modules/dump/: dump_lib.cpp
app/src/main/cpp/modules/lua/: lua_engine.cpp
app/src/main/cpp/modules/patcher/: patch_offset.cpp
app/src/main/cpp/modules/signature/: signature_killer.cpp
app/src/main/cpp/security/: AntiDebug.cpp
app/src/main/java/zig/cheat/qq/: MainActivity.java  ϟ.java
app/src/main/java/zig/cheat/qq/jni/: Jni.java
app/src/main/java/zig/cheat/qq/native_bridge/: StealthJNI.java
app/src/main/java/zig/cheat/qq/network/: SecureVolleyClient.java
app/src/main/java/zig/cheat/qq/security/: AntiDetectionManager.java  CryptoUtils.java  TrafficObfuscator.java
app/src/main/java/zig/cheat/qq/ui/: FloatingMenu.java  Menu.java  Utils.java
app/src/main/java/zig/cheat/qq/ui/anim/: AnimUtils.java
app/src/main/java/zig/cheat/qq/ui/components/: ContentPanel.java  ModernDropdown.java  ModernSeekBar.java  Sidebar.java  SmoothSwitch.java  SwitchRow.java  TrafficLightButton.java
app/src/main/java/zig/cheat/qq/ui/dialogs/: DumpLibDialog.java  ExportPathPickerDialog.java  LuaScriptDialog.java  PatchOffsetDialog.java  SignatureManagerDialog.java
app/src/main/java/zig/cheat/qq/ui/theme/: FontManager.java  ThemeConstants.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
